# OPN-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  readme.md  vcpkg.json
App/: App.cpp  App.cppm  CMakeLists.txt
App/Entry/: App.cpp  App.cppm  CMakeLists.txt
App/src/: CMakeLists.txt
Core/: main.cpp
Core/Renderer/: CMakeLists.txt  VulkanRenderer.cpp  VulkanRenderer.h
Core/Shaders/: CMakeLists.txt
Core/Shaders/HLSL/: triangle.vert.hlsl
Source/opnEngine/: CMakeLists.txt
Source/opnEngine/AppLinker/: AppLinker.cppm  Application.cppm  CMakeLists.txt  EntryPoint.cppm
Source/opnEngine/Core/: CMakeLists.txt
Source/opnEngine/Core/Application/: AppLinker.cppm  Application.cppm  ApplicationRunner.cppm  CMakeLists.txt  EntryPoint.cppm  iApplication.cppm
Source/opnEngine/Core/Locator/: CMakeLists.txt  Locator.cpp  Locator.cppm
Source/opnEngine/Core/Renderer/: CMakeLists.txt  DirectXImpl.cppm  RenderBackend.cppm  VulkanImpl.cppm  VulkanRenderer.cpp
Source/opnEngine/Core/Rendering/: CMakeLists.txt  DirectXImpl.cppm  RenderBackend.cppm  RenderPackage.cppm  RendererTypes.cppm  VulkanImpl.cppm
Source/opnEngine/Core/Rendering/DirectX/: DirectXImpl.cppm
Source/opnEngine/Core/Rendering/Vulkan/: VMA_VOLK_IMPLEMENTATION.cpp  VulkanImpl.cppm  vkDescriptors.cppm  vkImage.cppm  vkInit.cppm  vkLoader.cppm  vkPipeline.cppm  vkTypes.cppm  vkUtil.cppm
Source/opnEngine/Core/Shaders/: CMakeLists.txt  coloured_triangle.frag.slang  coloured_triangle.vert.slang  gradientColour_COMP.slang  sky.comp.glsl  testshader.slang  triangle.frag.slang  triangle.vert.slang  vertexData.slang
Source/opnEngine/Core/Shaders/HLSL/: triangle.frag.hlsl
Source/opnEngine/Core/System/: CMakeLists.txt  JobDispatcher.cppm  JobDispatcher.h  ServiceManager.cppm  SystemTypeList.cppm  SystemsManager.cppm  UUID.cppm  UUID.h  iService.cppm
Source/opnEngine/Core/System/Asset/: AssetSystem.cppm  AssetSystem.h  CMakeLists.txt  Model.h  Texture.h  Vertex.h  iAsset.h
Source/opnEngine/Core/System/Jobs/: JobDispatcher.cppm  JobHandle.cppm  JobTypes.cppm
Source/opnEngine/Core/System/Locator/: CMakeLists.txt  Locator.cppm
Source/opnEngine/Core/System/Services/: AssetSystem.cppm  CMakeLists.txt  ImGuiService.cppm  Rendering.cppm  ShaderReflection.cppm  SystemsPackage.cppm  TestSystem.cppm  Time.cppm  WindowSurfaceProvider.cppm  WindowSystem.cppm
Source/opnEngine/Core/System/Services/AssetService/: AssetDefines.cppm  AssetPaths.inl  AssetService.cppm  AssetSystem.cppm  AssetTypes.cppm  CMakeLists.txt  materialDefine.cppm  meshDefine.cppm  textureDefine.cppm
Source/opnEngine/Core/System/Services/EntityComponentSystem/: CMakeLists.txt  ECB.cppm  ECS.cppm  Registry.cppm  Service.cppm  Systems.cppm  tEntity.cppm
Source/opnEngine/Core/System/Services/EntityComponentSystem/Components/: CMakeLists.txt  Components.cppm  Renderable.cppm  ShaderOverride.cppm  Transform.cppm
Source/opnEngine/Core/System/Thread/: CMakeLists.txt  MPSCQueue.cppm  RawSPSCQueue.cppm  SPSCQueue.cppm
Source/opnEngine/Core/Utils/: CMakeLists.txt  Logger.cppm  RingBuffer.h  SPSCQueue.h  UUID.h  iSingleton.cppm
Source/opnEngine/Core/Utils/Exceptions/: CMakeLists.txt  Except_MultipleInit.cppm
Source/opnEngine/Core/Utils/Thread/: RawSPSCQueue.h  SPSCQueue.cppm  SPSCQueue.h
Source/opnEngine/Dependencies/: CMakeLists.txt
Source/opnEngine/Entrypoint/: CMakeLists.txt  EngineServices.cppm  main.cpp
Source/opnEngine/Modules/: CMakeLists.txt  Module_ServicePackage.cppm  ServiceList.cppm
Source/opnEngine/Platform/: CMakeLists.txt
Source/opnEngine/Platform/Windows/: CMakeLists.txt
Source/opnEngine/Platform/Windows/Utils/: CMakeLists.txt  winLogger.cppm
Source/opnEngine/Plugins/: CMakeLists.txt
Source/opnEngine/Standalone/: EngineServices.cppm  main.cpp
