find_package(Vulkan REQUIRED)
find_package(glfw3 REQUIRED)

# Added in order of dependency
add_subdirectory(Dependencies)
add_subdirectory(Core/Utils)
add_subdirectory(Core/System/Thread)
add_subdirectory(Core/System)
add_subdirectory(Core/System/Services/AssetService)
add_subdirectory(Core/System/Services/EntityComponentSystem/Components)
add_subdirectory(Core/System/Services/EntityComponentSystem)
add_subdirectory(Core/Rendering)
add_subdirectory(Core/System/Services)
add_subdirectory(Core/Shaders)
add_subdirectory(Entrypoint)