add_subdirectory(Utils)
add_subdirectory(System/Thread)
add_subdirectory(System)
add_subdirectory(System/Services/AssetService)
add_subdirectory(System/Services/EntityComponentSystem/Components)
add_subdirectory(System/Services/EntityComponentSystem)
add_subdirectory(Rendering)
add_subdirectory(System/Services)
add_subdirectory(Locator)
add_subdirectory(Shaders)
add_subdirectory(Application)
