add_subdirectory(Utils)
add_subdirectory(System/Thread)
add_subdirectory(System)
add_subdirectory(System/Locator)
add_subdirectory(System/Services/AssetService)
add_subdirectory(System/Services/EntityComponentSystem/Components)
add_subdirectory(System/Services/EntityComponentSystem)
add_subdirectory(Rendering)
add_subdirectory(System/Services)
add_subdirectory(Shaders)